exo: Do not capture cursor before initial commit

Bug: 707170
Test: No DCHECK when mouse first enters gtk3-demo.
Change-Id: Id8c7cd5834b8071384be2967c686988e16eadf9e
Reviewed-on: https://chromium-review.googlesource.com/899912
Reviewed-by: David Reveman <reveman@chromium.org>
Commit-Queue: Dominik Laskowski <domlaskowski@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534747}
Former-commit-id: 8dae785a0a89a4b40a41e4aeed4ea57866429a7f